force-app/main/default/objects/ND_Geo_Group_Region__c/fields/County_Number__c.field-meta.xml
<CustomField>
    <fullName>County_Number__c</fullName>
    <label>County Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>