force-app/main/default/objects/ND_Geo_Group_Region__c/fields/MSA_Code__c.field-meta.xml
<CustomField>
    <fullName>MSA_Code__c</fullName>
    <description>metro statistical area</description>
    <inlineHelpText>metro statistical area</inlineHelpText>
    <label>MSA Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>