force-app/main/default/objects/ND_Geo_Group_Region__c/fields/MSA_Name__c.field-meta.xml
<CustomField>
    <fullName>MSA_Name__c</fullName>
    <label>MSA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>