force-app/main/default/objects/ND_Geo_Group_Region__c/fields/ND_Club_Region__c.field-meta.xml
<CustomField>
    <fullName>ND_Club_Region__c</fullName>
    <label>ND Club Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Alumni_Clubs</valueSetName>
    </valueSet>
</CustomField>