force-app/main/default/objects/ND_Geo_Group_Region__c/fields/nd_Country_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>nd_Country_Full_Name__c</fullName>
    <description>The Country field holds the two-digit code for the Country.  This field was created to hold the full country name that is returned from Smarty Streets.</description>
    <inlineHelpText>This field was created to hold the full country name that is returned from Smarty Streets.</inlineHelpText>
    <label>Country Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>