force-app/main/default/objects/ND_Geo_Group_Region__c/fields/nd_Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>nd_Country_ISO_Code__c</fullName>
    <description>This field holds the three-digit ISO Code for a country.</description>
    <inlineHelpText>This field holds the three-digit ISO Code for a country.</inlineHelpText>
    <label>Country ISO Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>