force-app/main/default/objects/ND_Geo_Group_Region__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Postal_Code__c</columns>
    <columns>State_Code__c</columns>
    <columns>Prospect_Region__c</columns>
    <columns>MSA_Name__c</columns>
    <columns>MSA_Code__c</columns>
    <columns>ND_Club_Region__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>