force-app/main/default/objects/ND_Geo_Group_Region__c/listViews/Copy_of_International_Regions.listView-meta.xml
<ListView>
    <fullName>Copy_of_International_Regions</fullName>
    <columns>NAME</columns>
    <columns>Postal_Code__c</columns>
    <columns>City__c</columns>
    <columns>State_Code__c</columns>
    <columns>Country__c</columns>
    <columns>MSA_Code__c</columns>
    <columns>MSA_Name__c</columns>
    <columns>Prospect_Region__c</columns>
    <columns>ND_Club_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <label>Canada Regions</label>
</ListView>