force-app/main/default/objects/ND_Geo_Group_Region__c/listViews/Geo_Group_Regions_Foreign_Countries.listView-meta.xml
<ListView>
    <fullName>Geo_Group_Regions_Foreign_Countries</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State_Code__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Country__c</columns>
    <columns>MSA_Code__c</columns>
    <columns>MSA_Name__c</columns>
    <columns>ND_Club_Region__c</columns>
    <columns>Prospect_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>notEqual</operation>
        <value>US</value>
    </filters>
    <label>Geo Group Regions - Foreign Countries</label>
</ListView>